# idealism

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
blockdag/: Cargo.toml
blockdag/src/: accepted.rs  block.rs  block_address.rs  block_dag.rs  block_dag_config.rs  block_metadata.rs  block_metadata_ref.rs  config.rs  error.rs  lib.rs  plugin.rs  traits.rs
blockdag/tests/: blockdag_test.rs
committee/: Cargo.toml
committee/src/: committee.rs  lib.rs  member.rs  member_id.rs  members.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/bft/: committee.rs
common/src/blocks/: block.rs  block_metadata.rs  block_metadata_ref.rs  network_block.rs
common/src/collections/: any_map.rs
common/src/errors/: error.rs
common/src/extensions/: arc.rs
common/src/hash/: blake2b.rs  hashable.rs  hasher.rs
common/src/ids/: block_id.rs  id.rs
common/src/networking/: endpoint.rs  network.rs
common/src/plugins/: managed_plugin.rs  manager.rs  plugin.rs  plugin_manager.rs  plugin_registry.rs  plugins.rs
common/src/rx/: countdown.rs  signal.rs  subscription.rs  variable.rs
common/src/traced/: worker.rs
common/tests/: event_test.rs  signal_test.rs  variable_test.rs
config/: Cargo.toml
config/src/: committee_selection.rs  config.rs  leader_rotation.rs  lib.rs  plugin_loader.rs  slot_duration.rs
config/src/blockdag/: config.rs  params.rs  plugins.rs
config/src/protocol/: config.rs  params.rs  plugins.rs
config/src/virtual_voting/: committee_selection.rs  config.rs  params.rs
consensus/: Cargo.toml
consensus/src/: bft_committee.rs  block.rs  block_id.rs  committee.rs  committee_member.rs  committee_member_id.rs  config.rs  consensus.rs  error.rs  errors.rs  events.rs  issuer_id.rs  lib.rs  protocol.rs  protocol_data.rs  tips.rs  types.rs  vote.rs  vote_ref.rs  vote_refs.rs  votes.rs  votes_by_issuer.rs  votes_by_round.rs  voting.rs
consensus/src/bft_committee/: committee.rs  committee_data.rs  committee_member.rs  committee_member_id.rs
consensus/src/committee/: committee.rs  committee_member.rs
consensus/src/config/: committee_selection.rs  config.rs  config_interface.rs  leader_rotation.rs
consensus/src/configuration/: committee_selection.rs  config.rs  config_interface.rs  leader_rotation.rs  slot_duration.rs
consensus/src/consensus/: consensus_commitment.rs  consensus_mechanism.rs  consensus_view.rs  consensus_view_ref.rs  vote_tracker.rs
consensus/src/utils/: max_set.rs  set.rs  set_element.rs
consensus/src/voting/: issuer.rs  vote.rs  vote_data.rs  (+7 more)
consensus/tests/: committee_test.rs  protocl_test.rs
newtype/: Cargo.toml
newtype/src/: define.rs  define_hashmap.rs  define_hashset.rs  define_transparent.rs  delegate.rs  delegate_default.rs  delegate_extend.rs  delegate_from_iterator.rs  delegate_into_iterator.rs  lib.rs
newtypev1/: Cargo.toml
newtypev1/src/: lib.rs
protocol/: Cargo.toml
protocol-plugins/: Cargo.toml
protocol-plugins-old/: Cargo.toml
protocol-plugins-old/src/: lib.rs
protocol-plugins-old/src/block_factory/: plugin.rs
protocol-plugins-old/src/consensus_feed/: event.rs  plugin.rs
protocol-plugins-old/src/consensus_round/: plugin.rs
protocol-plugins-old/src/tip_selection/: plugin.rs
protocol-plugins-old/src/virtual_voting/: plugin.rs
protocol-plugins/block-dag/: Cargo.toml
protocol-plugins/block-factory/: Cargo.toml
protocol-plugins/block-factory/src/: block_factory.rs  lib.rs
protocol-plugins/block-storage/: Cargo.toml
protocol-plugins/config/: Cargo.toml
protocol-plugins/config/src/: config.rs
protocol-plugins/config/src/protocol/: params.rs  plugins.rs
protocol-plugins/config/src/virtual_voting/: leader_rotation.rs  params.rs  slot_duration.rs
protocol-plugins/consensus/: Cargo.toml
protocol-plugins/consensus-feed/: Cargo.toml
protocol-plugins/consensus-round/: Cargo.toml
protocol-plugins/consensus-round/src/: lib.rs  plugin.rs
protocol-plugins/consensus/src/: acceptance_state.rs  accepted_blocks.rs  consensus.rs  lib.rs  metadata.rs  plugin.rs
protocol-plugins/inbox/: Cargo.toml
protocol-plugins/inbox/src/: inbox.rs  lib.rs
protocol-plugins/networking/: Cargo.toml
protocol-plugins/networking/src/: lib.rs  networking.rs
protocol-plugins/outbox/: Cargo.toml
protocol-plugins/src/: lib.rs
protocol-plugins/tip-selection/: Cargo.toml
protocol-plugins/validator/: Cargo.toml
protocol-plugins/validator/src/: config.rs  config_params.rs  lib.rs  validator.rs
protocol-plugins/virtual-voting/: Cargo.toml
protocol-plugins/virtual-voting/src/: config.rs  consensus_mechanism.rs  error.rs  lib.rs  milestone.rs  plugin.rs  virtual_voting.rs  virtual_voting_config.rs  vote.rs  vote_builder.rs  weight_tracker.rs
protocol-plugins/virtual-voting/src/collections/: vote_refs_by_issuer.rs  votes_by_issuer.rs
protocol-plugins/virtual-voting/tests/: committee_test.rs  virtual_voting_test.rs
protocol/src/: config.rs  error.rs  events.rs  lib.rs  managed_plugin.rs  plugin.rs  plugins.rs  protocol.rs  protocol_config.rs  protocol_data.rs  state.rs  tips.rs
protocol/tests/: protocl_test.rs  protocol_test.rs
sim/: Cargo.toml
sim/src/: lib.rs  network.rs  node.rs
simulator/: Cargo.toml
simulator/src/: endpoint.rs  lib.rs  network.rs  network_id.rs
types/: Cargo.toml
types/src/: block.rs  block_id.rs  hashable.rs  hasher.rs  id.rs  issuer_id.rs  lib.rs
types/tests/: event_test.rs  signal_test.rs  variable_test.rs
utils/: Cargo.toml
utils/src/: arc_key.rs  id.rs  lib.rs  max_set.rs  rx.rs
utils/tests/: event_test.rs  signal_test.rs  variable_test.rs
virtual-voting/: Cargo.toml
virtual-voting/src/: config.rs  error.rs  issuer.rs  lib.rs  milestone.rs  virtual_voting.rs  virtual_voting_config.rs  vote.rs  vote_builder.rs  vote_ref.rs  weight_tracker.rs
virtual-voting/tests/: committee_test.rs  virtual_voting_test.rs
virtual_voting/src/: errors.rs  issuer.rs  lib.rs  milestone.rs  types.rs  virtual_voting.rs  vote.rs  vote_builder.rs  vote_ref.rs  weight_tracker.rs
virtual_voting/tests/: committee_test.rs
zero/: Cargo.toml
zero/src/: lib.rs
(+66 files in other folders)
