[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10.6"
slotmap = "1.0.7"
trait-set = "0.3.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
postcard = { version = "1.1.1", features = ["alloc"] }
zero = { path = "../zero" }
async-trait = "0.1.88"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }