[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
zero = { path = "../zero" }

[dev-dependencies]
block-storage = { path = "../protocol-plugins/block-storage"}
config = { path = "../protocol-plugins/config" }
consensus-round = { path = "../protocol-plugins/consensus-round" }
protocol-plugins = { path = "../protocol-plugins-old" }
virtual-voting = { path = "../protocol-plugins/virtual-voting" }