[package]
name = "protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
zero = { path = "../zero" }

[dev-dependencies]
block-storage = { path = "../protocol-plugins/block-storage"}
block-factory = { path = "../protocol-plugins/block-factory" }
config = { path = "../protocol-plugins/config" }
consensus-round = { path = "../protocol-plugins/consensus-round" }
virtual-voting = { path = "../protocol-plugins/virtual-voting" }
consensus-feed = { path = "../protocol-plugins/consensus-feed" }
validator = { path = "../protocol-plugins/validator" }