[package]
name = "sim"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
common = { path = "../common" }
config = { path = "../protocol-plugins/config" }
protocol = { path = "../protocol" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
validator = { path = "../protocol-plugins/validator" }