[package]
name = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
consensus = { path = "../consensus" }
consensus-round = { path = "../consensus-round" }
protocol = { path = "../../protocol" }
block-factory = { path = "../block-factory" }
block-dag = { path = "../block-dag" }
block-storage = { path = "../block-storage"}
common = { path = "../../common" }
tip-selection = { path = "../tip-selection" }
virtual-voting = { path = "../virtual-voting" }
consensus-feed = { path = "../consensus-feed" }
outbox = { path = "../outbox" }
inbox = { path = "../inbox" }
networking = { path = "../networking" }