[package]
name = "consensus-round"
version = "0.1.0"
edition = "2024"

[dependencies]
block-dag = { path = "../block-dag" }
consensus = { path = "../consensus" }
protocol = { path = "../../protocol" }
common = { path = "../../common" }
tracing = "0.1.41"
virtual-voting = { path = "../virtual-voting" }
async-trait = "0.1.88"