[package]
name = "consensus"
version = "0.1.0"
edition = "2024"

[dependencies]
block-dag = { path = "../block-dag" }
common = { path = "../../common" }
indexmap = "2.9.0"
protocol = { path = "../../protocol" }
tracing = "0.1.41"
virtual-voting = { path = "../virtual-voting" }
async-trait = "0.1.88"