[package]
name = "inbox"
version = "0.1.0"
edition = "2024"

[dependencies]
block-storage = { path = "../block-storage" }
common = { path = "../../common" }
protocol = { path = "../../protocol" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
async-trait = "0.1.88"