[package]
name = "networking"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../common" }
inbox = { path = "../inbox" }
outbox = { path = "../outbox" }
protocol = { path = "../../protocol" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"