[package]
name = "virtual-voting"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../../protocol" }
block-dag = { path = "../block-dag" }
common = { path = "../../common" }
zero = { path = "../../zero" }
thiserror = "2.0.12"
tracing = "0.1.41"
async-trait = "0.1.88"

[dev-dependencies]
config = { path = "../config" }
